# anaheim-putsch-self-governance-solana-dapp

./: .dockerignore  .env  .eslintignore  .eslintrc.mjs  .gitmodules  Anchor.toml  Dockerfile  README-anaheim.md  anaheim-account-key.json  anaheim-init.ts  anaheim-project-ai-mem-restore.json  anaheim_init.ts  babel.config.mjs  bug-log.txt  eslint.config.mjs  global.d.ts  index.html  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.mjs  read-keypair.js  tailwind.config.ts  test-parser.js  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
anchor/programs/anaheim/: Cargo.toml  anaheim.rs  programId.md
anchor/programs/anaheim/src/: constants.rs  contexts.rs  core.rs  error.rs  error_code.rs  lib.rs  post.rs  test_post_account.rs  validate_post_content.rs
anchor/programs/anaheim/src/accounts/: mod.rs  post_accounts.rs  user_account.rs  validate_username.rs
anchor/programs/anaheim/src/anaheim_init/: anaheim_init.rs  mod.rs
anchor/programs/anaheim/src/close/: close.rs  close_account.rs  close_anaheim.rs  close_mine.rs  close_post.rs  close_user.rs  mod.rs
anchor/programs/anaheim/src/contexts/: create_post.rs  create_user.rs  decrement.rs  increment.rs  initialize.rs  mine.rs  mod.rs  update.rs  vote_post.rs
anchor/programs/anaheim/src/handlers/: close.rs  close_post.rs  create_post.rs  create_user.rs  decrement_handler.rs  handle_close_post.rs  handle_create_post.rs  handle_create_user.rs  handle_increment.rs  handler.rs  handler_mine.rs  handlers.rs  increment.rs  mod.rs  (+7 more)
(+422 files in other folders)
