[package]
name = "anaheim"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anaheim"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

8
[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
solana-program = "2.3.0"